--- a/trabalhoemhtml.html
+++ b/trabalhoemhtml.html
@@ -82,9 +82,9 @@
         
         </table>
 
-        <a href="https://ifrs.edu.br/riogrande/numem-realiza-evento-alusivo-aos-59-anos-do-ifrs-campus-rio-grande/"> <img src="SELO-59-anos-IFRS-RG.png" alt=" Selo de 59 anos do campus Rio Grande"></a>
+        <a href="https://ifrs.edu.br/riogrande/numem-realiza-evento-alusivo-aos-59-anos-do-ifrs-campus-rio-grande/"> <img src="img/SELO-59-anos-IFRS-RG.png" alt=" Selo de 59 anos do campus Rio Grande"></a>
         <figure>
-            <img src="logoifrs.png" alt="Imagem da logo do IFRS">
+            <img src="img/logoifrs.png" alt="Imagem da logo do IFRS">
             <figcaption> Imagem da logo do IFRS </figcaption>
         </figure>
         <br>
